# mcp-datly

./: .gitignore  LICENSE  README.md  bootstrap-creds.sh  pyproject.toml
datly_mcp/: __init__.py  client.py  credentials.py  errors.py  server.py  state.py
datly_mcp/tools/: __init__.py  _guards.py  _slim.py  coarse.py  read.py  schema.py  visual.py
tests/: test_slim.py
