[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "datly-mcp"
version = "0.1.0"
description = "MCP server to read and edit Datly database diagrams with live preview"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27",
]

[project.scripts]
datly-mcp = "datly_mcp.server:main"

[tool.setuptools.packages.find]
include = ["datly_mcp*"]
