[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "datly-mcp"
version = "0.1.0"
description = "MCP server to read and edit Datly database diagrams with live preview"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "DigitalPath AI" }]
keywords = ["mcp", "datly", "database", "erd", "dbml", "claude", "ai", "diagram"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Tools",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27",
]

[project.urls]
Homepage = "https://datly.tech"
Repository = "https://github.com/digitalpathaisydney-sudo/mcp-datly"
Issues = "https://github.com/digitalpathaisydney-sudo/mcp-datly/issues"

[project.scripts]
datly-mcp = "datly_mcp.server:main"

[tool.setuptools.packages.find]
include = ["datly_mcp*"]
